--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
           </ul>
         </address>
       </div>
+      <div class="modal-menu">
+        <div class="modal-menu-window">
+          <div class="div-modal-button">
+            <button class="modal-button">
+              <svg width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+          </div>
+          <nav class="modal-window-nav">
+            <ul class="modal-ul">
+              <li class="modal-item">
+                <a class="modal-item-link" href="./index.html">Studio</a>
+              </li>
+              <li class="modal-item">
+                <a class="modal-item-link" href="./index.html">Portfolio</a>
+              </li>
+              <li class="modal-item">
+                <a class="modal-item-link" href="./index.html">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
     <!--======MAIN======-->
     <main>
