--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
       </section>
       <!--======SECTION-THREE======-->
-      <section class="section-three hidden">
+      <section class="section-three">
         <div class="container">
           <h2 class="team">Our Team</h2>
           <ul class="workers">
