--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <ul class="list">
             <li class="first">
               <div class="icon-container">
-                <svg class="hidden" width="64" height="64">
+                <svg class="svg-section-two" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -162,7 +162,7 @@
             </li>
             <li class="first">
               <div class="icon-container">
-                <svg class="hidden" width="64" height="64">
+                <svg class="svg-section-two" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -174,7 +174,7 @@
             </li>
             <li class="first">
               <div class="icon-container">
-                <svg class="hidden" width="64" height="64">
+                <svg class="svg-section-two" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -186,7 +186,7 @@
             </li>
             <li class="first">
               <div class="icon-container">
-                <svg class="hidden" width="64" height="64">
+                <svg class="svg-section-two" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -205,7 +205,12 @@
           <h2 class="team">Our Team</h2>
           <ul class="workers">
             <li class="list-item">
-              <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
+              <img
+                class="workers-img"
+                src="./images/mark.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
               <div class="workersstyle">
                 <h3 class="names">Mark Guerrero</h3>
                 <p class="paragraf-names">Product Designer</p>
@@ -242,7 +247,12 @@
               </div>
             </li>
             <li class="list-item">
-              <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
+              <img
+                class="workers-img"
+                src="./images/tom.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
               <div class="workersstyle">
                 <h3 class="names">Tom Ford</h3>
                 <p class="paragraf-names">Frontend Developer</p>
@@ -279,7 +289,12 @@
               </div>
             </li>
             <li class="list-item">
-              <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
+              <img
+                class="workers-img"
+                src="./images/camila.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
               <div class="workersstyle">
                 <h3 class="names">Camila Garcia</h3>
                 <p class="paragraf-names">Marketing</p>
@@ -316,7 +331,12 @@
               </div>
             </li>
             <li class="list-item">
-              <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
+              <img
+                class="workers-img"
+                src="./images/daniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
               <div class="workersstyle">
                 <h3 class="names">Daniel Wilson</h3>
                 <p class="paragraf-names">UI Designer</p>
@@ -363,6 +383,14 @@
             <li class="apps-list">
               <div class="portfolio-image">
                 <picture>
+                  <!-- dekstop screen -->
+                  <source
+                    media="(min-width:1158px )"
+                    srcset="
+                      ./images/bankingapp.jpg        1x,
+                      ./images/banking-app-pc@2x.jpg 2x
+                    "
+                  />
                   <!-- tablet screen -->
                   <source
                     media="(min-width: 768px)"
@@ -400,6 +428,14 @@
             <li class="apps-list">
               <div class="portfolio-image">
                 <picture>
+                  <!-- dekstop screen -->
+                  <source
+                    media="(min-width:1158px )"
+                    srcset="
+                      ./images/CashlessPayment.jpg          1x,
+                      ./images/cashless-payment-pc@2x.jpg2x
+                    "
+                  />
                   <!-- tablet screen -->
                   <source
                     media="(min-width:768px )"
@@ -437,6 +473,14 @@
             <li class="apps-list">
               <div class="portfolio-image">
                 <picture>
+                  <!-- dekstop screen -->
+                  <source
+                    media="(min-width:1158px )"
+                    srcset="
+                      ./images/MeditationApp.jpg        1x,
+                      ./images/meditation-app-pc@2x.jpg 2x
+                    "
+                  />
                   <!-- tablet screen -->
                   <source
                     media="(min-width: 768px)"
@@ -474,6 +518,14 @@
             <li class="apps-list">
               <div class="portfolio-image">
                 <picture>
+                  <!-- dekstop screen -->
+                  <source
+                    media="(min-width:1158px )"
+                    srcset="
+                      ./images/TaxiService.jpg        1x,
+                      ./images/taxi-service-pc@2x.jpg 2x
+                    "
+                  />
                   <!-- tablet screen -->
                   <source
                     media="(min-width: 768px )"
@@ -511,6 +563,14 @@
             <li class="apps-list">
               <div class="portfolio-image">
                 <picture>
+                  <!-- dekstop screen -->
+                  <source
+                    media="(min-width:1158px )"
+                    srcset="
+                      ./images/ScreenIllustrations.jpg        1x,
+                      ./images/screen-illustrations-pc@2x.jpg 2x
+                    "
+                  />
                   <!-- tablet screen -->
                   <source
                     media="(min-width:768px )"
@@ -548,6 +608,14 @@
             <li class="apps-list">
               <div class="portfolio-image">
                 <picture>
+                  <!-- dekstop screen -->
+                  <source
+                    media="(min-width:1158px )"
+                    srcset="
+                      ./images/OnlineCourses.jpg        1x,
+                      ./images/online-courses-pc@2x.jpg 2x
+                    "
+                  />
                   <!-- tablet screen -->
                   <source
                     media="(min-width: 768px )"
