--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
         <address class="address">
           <ul class="contact_list">
-            <li>
+            <li class="contact-list-li">
               <a
                 href="mailto:info@devstudio.com"
                 class="contacts second-contact"
@@ -206,6 +206,7 @@
           <ul class="workers">
             <li class="list-item">
               <img
+                srcset="./images/mark.jpg 1x, ./images/mark@2x.jpg 2x"
                 class="workers-img"
                 src="./images/mark.jpg"
                 alt="Mark Guerrero"
@@ -248,6 +249,7 @@
             </li>
             <li class="list-item">
               <img
+                srcset="./images/tom.jpg 1x, ./images/tom@2x.jpg 2x"
                 class="workers-img"
                 src="./images/tom.jpg"
                 alt="Tom Ford"
@@ -290,6 +292,7 @@
             </li>
             <li class="list-item">
               <img
+                srcset="./images/camila.jpg 1x, ./images/camila@2x.jpg 2x"
                 class="workers-img"
                 src="./images/camila.jpg"
                 alt="Camila Garcia"
@@ -332,6 +335,7 @@
             </li>
             <li class="list-item">
               <img
+                srcset="./images/daniel.jpg 1x, ./images/daniel@2x.jpg 2x"
                 class="workers-img"
                 src="./images/daniel.jpg"
                 alt="Daniel Wilson"
