--- a/index.html
+++ b/index.html
@@ -62,14 +62,12 @@
         </button>
       </div>
       <div class="modal-menu">
-        <div class="modal-menu-window">
-          <div class="div-modal-button">
-            <button class="modal-button">
-              <svg width="8" height="8">
-                <use href="./images/icons.svg#icon-close"></use>
-              </svg>
-            </button>
-          </div>
+        <div class="container-modal modal-menu-window">
+          <button class="modal-button">
+            <svg width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
           <nav class="modal-window-nav">
             <ul class="modal-ul">
               <li class="modal-item">
@@ -99,38 +97,36 @@
               </li>
             </ul>
           </address>
-          <div class="mob-social-media">
-            <ul class="mob-social-media-list">
-              <li class="mob-social-media-svg">
-                <a class="mob-social-media-link" href="./index.html">
-                  <svg class="mob-svg" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mob-social-media-svg">
-                <a class="mob-social-media-link" href="./index.html">
-                  <svg class="mob-svg" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mob-social-media-svg">
-                <a class="mob-social-media-link" href="./index.html">
-                  <svg class="mob-svg" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mob-social-media-svg">
-                <a class="mob-social-media-link" href="./index.html">
-                  <svg class="mob-svg" width="24" height="24">
-                    <use href="./images/icons.svg#icon-in"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="mob-social-media-list">
+            <li class="mob-social-media-svg">
+              <a class="mob-social-media-link" href="./index.html">
+                <svg class="mob-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-social-media-svg">
+              <a class="mob-social-media-link" href="./index.html">
+                <svg class="mob-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-social-media-svg">
+              <a class="mob-social-media-link" href="./index.html">
+                <svg class="mob-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-social-media-svg">
+              <a class="mob-social-media-link" href="./index.html">
+                <svg class="mob-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-in"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
