--- a/index.html
+++ b/index.html
@@ -798,9 +798,12 @@
               <span class="span-checkbox"
                 ><svg class="svg-checkbox" width="10" height="8">
                   <use href="./images/icons.svg#icon-galochka"></use>
-                </svg> </span
-              >I accept the terms and conditions of the
-              <a class="link-checkbox" href="#">Privacy Policy</a>
+                </svg>
+              </span>
+              <span>
+                I accept the terms and conditions of the
+                <a class="link-checkbox" href="#">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button class="btn-send">Send</button>
